# acoustic_comms_engine

./: .env.example  .gitignore  README.md  agents.md  update.md  vercel.json
backend/: .coverage  Dockerfile  Dockerfile.dev  Makefile  alembic.ini  pyproject.toml  render.yaml  requirements.txt
backend/alembic/: env.py
backend/app/: database.py  main.py
backend/app/audio/: __init__.py  chunking.py  denoise.py  errors.py  pipeline.py  resample.py  types.py  vad.py
backend/app/core/: config.py  deps.py  events.py  security.py
backend/app/graph/: __init__.py  analyzer.py  builder.py  errors.py  traverser.py  types.py
backend/app/memory/: __init__.py  errors.py  service.py  types.py
backend/app/models/: __init__.py  acoustic_label.py  analysis_report.py  audio_event.py  base.py  embedding.py  enums.py  memory_document.py  session.py  speaker.py  turn.py  user.py
backend/app/reasoning/: __init__.py  errors.py  llm_client.py  orchestrator.py  schemas.py
backend/app/schemas/: session.py
backend/app/services/: groq_service.py  pipeline_service.py
backend/app/speech/: __init__.py  encoder.py  registry.py  service.py  types.py
backend/app/streaming/: __init__.py  dispatcher.py  errors.py  handler.py  manager.py  router.py  types.py
backend/tests/: .env.test  conftest.py  test_auth.py  test_health.py  test_sessions.py
backend/tests/audio/: conftest.py  test_chunking.py  test_pipeline.py  test_resample.py  test_vad.py
backend/tests/graph/: conftest.py  test_analyzer.py  test_builder.py  test_traverser.py
backend/tests/memory/: conftest.py  (+2 more)
(+174 files in other folders)
