[project]
name = "acoustic-comms-engine"
version = "0.1.0"
description = "Research-grade speech intelligence — real-time communication analysis with multi-agent reasoning"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.2.0",
    "qdrant-client>=1.13.0",
    "httpx>=0.28.0",
    "openai>=1.58.0",
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.12",
    "networkx>=3.4.0",
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "silero-vad>=5.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-watch>=4.2.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "respx>=0.22.0",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest-cov>=7.1.0",
    "pytest-watch>=4.2.0",
]
